# Bazel-playground

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  bazel-Bazel-Grpc  bazel-bin  bazel-out  bazel-testlogs
dagger/example1/: BUILD.bazel
dagger/example1/me/adkhambek/dagger/example/: AppComponent.java  AppModule.java  Main.java
java/example1/: BUILD.bazel
java/example1/me/adkhambek/example/: Main.java
java/example2/: BUILD.bazel
java/example2/me/adkhambek/example2/: Main.java
java/example3/: BUILD.bazel
java/example3/me/adkhambek/example3/: Main.java
java/example4/: BUILD.bazel
java/example4/me/adkhambek/example4/: Main.java
java/example4/me/adkhambek/print/: PrintUtil.java
kotlin/example1/: BUILD.bazel
kotlin/example1/me/adkhambek/kotlin/example/: Application.kt
server/src/kotlin/: BUILD
server/src/kotlin/me/adkhambek/hamroh/: Application.kt  DI.kt  User.kt
